force-app/main/default/objects/ffscpq__Estimate__c/ffscpq__Estimate__c.object-meta.xml
<CustomObject>
    <description>Estimate services work with resources, expenses, and margin requirements using existing rate cards.</description>
    <label>Estimate</label>
    <nameField>
        <label>Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>