force-app/main/default/objects/ffscpq__Estimate__c/fields/CT_Current_Esimate__c.field-meta.xml
<CustomField>
    <fullName>CT_Current_Esimate__c</fullName>
    <label>Current Estimate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>