force-app/main/default/objects/ffscpq__Estimate__c/fields/CT_Expected_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Expected_Recovery_Rate__c</fullName>
    <formula>IF( ffscpq__Amount__c == 0,0, (CT_Fee_Amount__c / ffscpq__Amount__c)*100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Recovery Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>