force-app/main/default/objects/ffscpq__Estimate__c/fields/CT_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>CT_Fee_Amount__c</fullName>
    <label>Fee Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>