force-app/main/default/objects/ffscpq__Estimate__c/fields/CT_Original_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>CT_Original_Fee_Amount__c</fullName>
    <label>Original Fee Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>