force-app/main/default/objects/ffscpq__Estimate__c/fields/CT_Planned_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Planned_Recovery_Rate__c</fullName>
    <label>Planned Recovery Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>