force-app/main/default/objects/ffscpq__Estimate__c/fields/OriginalProject__c.field-meta.xml
<CustomField>
    <fullName>OriginalProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Estimates (Original Project)</relationshipLabel>
    <relationshipName>Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>