force-app/main/default/objects/ffscpq__Estimate__c/fields/Total_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Amount__c</fullName>
    <formula>ffscpq__Amount__c + ffscpq__Expense__c + ffscpq__Total_Non_Billable_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>