force-app/main/default/objects/ffscpq__Estimate__c/validationRules/Discount_Not_applicable.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Not_applicable</fullName>
    <active>true</active>
    <description>Discount Not applicable</description>
    <errorConditionFormula>ffscpq__Discount__c != 0</errorConditionFormula>
    <errorMessage>Discount not applicable! Please remove discount and save again.</errorMessage>
</ValidationRule>