force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Cannot_change_Account_once_set.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Cannot_change_Account_once_set</fullName>
    <active>true</active>
    <description>Error message displayed when editing the Account field on an estimate.</description>
    <errorConditionFormula>(  ffscpq__Is_Template__c  = false &amp;&amp; ( ISCHANGED( ffscpq__Account__c ) &amp;&amp;  ffscpq__Opportunity__r.AccountId !=  ffscpq__Account__c ) )</errorConditionFormula>
    <errorMessage>You cannot edit the Account field on an estimate.</errorMessage>
</ValidationRule>