force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Cannot_change_Is_Template_once_set.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Cannot_change_Is_Template_once_set</fullName>
    <active>true</active>
    <description>Error message displayed when editing the Template field on an estimate.</description>
    <errorConditionFormula>ISCHANGED(ffscpq__Is_Template__c)</errorConditionFormula>
    <errorDisplayField>ffscpq__Is_Template__c</errorDisplayField>
    <errorMessage>You cannot edit the Template field on an estimate.</errorMessage>
</ValidationRule>