force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Cannot_change_Opportunity_once_set.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Cannot_change_Opportunity_once_set</fullName>
    <active>true</active>
    <description>Message displayed when changing the opportunity on an estimate.</description>
    <errorConditionFormula>(ffscpq__Is_Template__c = false &amp;&amp; ISCHANGED(ffscpq__Opportunity__c) &amp;&amp; ffscpq__Opportunity__c != null)</errorConditionFormula>
    <errorDisplayField>ffscpq__Opportunity__c</errorDisplayField>
    <errorMessage>You cannot change the opportunity on an estimate.</errorMessage>
</ValidationRule>