force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Cannot_change_product_once_pushed.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Cannot_change_product_once_pushed</fullName>
    <active>false</active>
    <description>Message when independent records have already been added to opportunity.</description>
    <errorConditionFormula>AND( ffscpq__Is_Pushed_To_Opportunity__c = TRUE,  ISCHANGED( ffscpq__Product__c ) )</errorConditionFormula>
    <errorDisplayField>ffscpq__Product__c</errorDisplayField>
    <errorMessage>The estimate&apos;s related product can&apos;t be changed because records independent of estimate products have been added to opportunity.</errorMessage>
</ValidationRule>