force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Cannot_lock_estimate_template.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Cannot_lock_estimate_template</fullName>
    <active>true</active>
    <description>Error message when trying to lock an estimate template.</description>
    <errorConditionFormula>AND( ffscpq__Is_Template__c = TRUE,  ffscpq__Is_Locked__c )</errorConditionFormula>
    <errorDisplayField>ffscpq__Is_Locked__c</errorDisplayField>
    <errorMessage>Estimate templates cannot be locked.</errorMessage>
</ValidationRule>