force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Cannot_set_estimate_template_as_primary.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Cannot_set_estimate_template_as_primary</fullName>
    <active>true</active>
    <description>Error message when setting an estimate template as primary.</description>
    <errorConditionFormula>(ffscpq__Is_Template__c = true &amp;&amp; ffscpq__Is_Primary__c = true)</errorConditionFormula>
    <errorDisplayField>ffscpq__Is_Primary__c</errorDisplayField>
    <errorMessage>Estimate templates cannot be marked as primary.</errorMessage>
</ValidationRule>