force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Invalid_Independent_FP_Margin_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Invalid_Independent_FP_Margin_Value</fullName>
    <active>true</active>
    <description>Error message when attempting to update this field with an invalid value.</description>
    <errorConditionFormula>ffscpq__Independent_Line_Set_FP_Margin_Percent__c &lt; -0.9999 || ffscpq__Independent_Line_Set_FP_Margin_Percent__c &gt; 0.9999</errorConditionFormula>
    <errorDisplayField>ffscpq__Independent_Line_Set_FP_Margin_Percent__c</errorDisplayField>
    <errorMessage>The value in the Independent Line Set Fixed Price Mgn (%) field must be between -100 and 100.</errorMessage>
</ValidationRule>