force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Invalid_Independent_LS_Billing_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Invalid_Independent_LS_Billing_Type</fullName>
    <active>true</active>
    <description>Error message when trying to set the Independent Line Set Billing Type to None.</description>
    <errorConditionFormula>ISPICKVAL(ffscpq__Independent_Line_Set_Billing_Type__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>ffscpq__Independent_Line_Set_Billing_Type__c</errorDisplayField>
    <errorMessage>The Independent Line Set Billing Type value cannot be None.</errorMessage>
</ValidationRule>