force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Non_template_must_have_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Non_template_must_have_Opportunity</fullName>
    <active>true</active>
    <description>Error message when a non-template estimate does not have an opportunity.</description>
    <errorConditionFormula>(ffscpq__Is_Template__c == false &amp;&amp; ffscpq__Opportunity__c == null)</errorConditionFormula>
    <errorDisplayField>ffscpq__Opportunity__c</errorDisplayField>
    <errorMessage>Estimates that are not marked as a template must be associated with an opportunity.</errorMessage>
</ValidationRule>