force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Start_Date_must_be_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Start_Date_must_be_before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ffscpq__End_Date__c &lt;  ffscpq__Start_Date__c</errorConditionFormula>
    <errorDisplayField>ffscpq__Start_Date__c</errorDisplayField>
    <errorMessage>The estimate start date must be on or before the estimate end date.</errorMessage>
</ValidationRule>