force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Template_cannot_have_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Template_cannot_have_Opportunity</fullName>
    <active>true</active>
    <description>Error message when adding an opportunity to a template estimate.</description>
    <errorConditionFormula>(ffscpq__Is_Template__c = true &amp;&amp; ffscpq__Opportunity__c != null)</errorConditionFormula>
    <errorDisplayField>ffscpq__Opportunity__c</errorDisplayField>
    <errorMessage>Estimates that are marked as a template cannot be associated with an opportunity.</errorMessage>
</ValidationRule>