force-app/main/default/objects/ffscpq__Estimate__c/validationRules/ffscpq__Uplift_percentage_minimum_value_exceeded.validationRule-meta.xml
<ValidationRule>
    <fullName>ffscpq__Uplift_percentage_minimum_value_exceeded</fullName>
    <active>true</active>
    <description>Message when role request uplift is less than -100%.</description>
    <errorConditionFormula>ffscpq__Role_Request_Uplift_Percentage__c &lt; -1</errorConditionFormula>
    <errorDisplayField>ffscpq__Role_Request_Uplift_Percentage__c</errorDisplayField>
    <errorMessage>Role request uplift must be greater than or equal to -100%.</errorMessage>
</ValidationRule>