force-app/main/default/objects/ffscpq__Estimate__c/validationRules/Lowest_level_practice_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lowest_level_practice_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(ffscpq__Practice__c) &amp;&amp; NOT(ISNULL(ffscpq__Practice__c)) &amp;&amp; ffscpq__Practice__r.pse__Hierarchy_Depth__c &lt; 3</errorConditionFormula>
    <errorDisplayField>ffscpq__Practice__c</errorDisplayField>
    <errorMessage>Only the lowest level practices are allowed</errorMessage>
</ValidationRule>