force-app/main/default/objects/ffscpq__Estimate__c/listViews/ffscpq__All.listView-meta.xml
<ListView>
    <fullName>ffscpq__All</fullName>
    <columns>NAME</columns>
    <columns>ffscpq__Opportunity__c</columns>
    <columns>ffscpq__Scoping_Session__c</columns>
    <columns>ffscpq__Is_Primary__c</columns>
    <columns>ffscpq__Is_Template__c</columns>
    <columns>ffscpq__Billing_Type__c</columns>
    <columns>ffscpq__Net_Amount__c</columns>
    <columns>ffscpq__Cost__c</columns>
    <columns>ffscpq__Margin__c</columns>
    <columns>ffscpq__Percent_Margin__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ffscpq__Is_Pushed_To_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>