force-app/main/default/objects/ffscpq__Estimate__c/listViews/ffscpq__Template_Estimates.listView-meta.xml
<ListView>
    <fullName>ffscpq__Template_Estimates</fullName>
    <columns>NAME</columns>
    <columns>ffscpq__Billing_Type__c</columns>
    <columns>ffscpq__Net_Amount__c</columns>
    <columns>ffscpq__Cost__c</columns>
    <columns>ffscpq__Margin__c</columns>
    <columns>ffscpq__Percent_Margin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ffscpq__Is_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Template Estimates</label>
</ListView>